--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -545,16 +545,13 @@ i {
 }
 
 textarea {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
   height: 20px;
   resize: none;
   border: none;
   font-size: 1.2rem;
-}
-
-textarea::-moz-placeholder {
-  color: gray;
-  font-family: "Open Sans", sans-serif;
 }
 
 textarea::placeholder {
@@ -611,7 +608,6 @@ hr {
   align-items: center;
   overflow-x: hidden;
   min-height: 100vh;
-  max-height: -moz-min-content;
   max-height: min-content;
   min-width: 200px;
   margin-top: 1rem;
@@ -686,6 +682,7 @@ hr {
 .side-nav__content--list__item:focus {
   -webkit-tap-highlight-color: transparent;
   outline: none;
+  -ms-touch-action: manipulation;
   touch-action: manipulation;
 }
 .side-nav__content--list__item.create-item {
@@ -949,7 +946,6 @@ hr {
   cursor: pointer;
 }
 .navbar .navbar-bottom .create-container .group-container-create .group-fields .group-item .group-item-topic {
-  width: 120px;
   display: flex;
   align-items: center;
   gap: 0.5rem;
@@ -1008,7 +1004,7 @@ hr {
   gap: 1rem;
   align-items: center;
 }
-.navbar .create-show {
+.navbar .create-show, .navbar .search-menu {
   position: absolute;
   display: flex;
   flex-direction: column;
@@ -1021,10 +1017,6 @@ hr {
   top: 0;
   left: 50%;
   transform: translateX(-50%);
-}
-.navbar input[type=text].search-input::-moz-placeholder {
-  opacity: 0.5;
-  font-size: 1.25rem;
 }
 .navbar input[type=text].search-input::placeholder {
   opacity: 0.5;
@@ -1041,7 +1033,6 @@ hr {
   }
   .navbar .navbar-top .navbar__main .navbar__main--search,
   .navbar .navbar-top .navbar__main .navbar__main--create {
-    width: -moz-min-content;
     width: min-content;
   }
 }
@@ -1100,8 +1091,7 @@ hr {
 }
 .round-img-container img {
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   height: 100%;
   display: block;
 }
@@ -1142,7 +1132,6 @@ hr {
   padding: 0 0.4rem;
   border-radius: 8px;
   font-size: 12px;
-  min-width: -moz-max-content;
   min-width: max-content;
 }
 .icons-container-create .create-category .create-icon {
@@ -1162,7 +1151,6 @@ hr {
 
 .navbar__create {
   background-color: var(--color-permanent-bg);
-  width: -moz-max-content;
   width: max-content;
   display: flex;
   gap: 0.5rem;
@@ -1186,7 +1174,6 @@ hr {
 }
 
 .search-width {
-  width: -moz-fit-content;
   width: fit-content;
 }
 
@@ -1208,9 +1195,6 @@ hr {
   border: 1px solid #3a700b;
   border: 1px solid rgba(58, 112, 11, 0.6509803922);
 }
-.field-container .input-container.green input::-moz-placeholder {
-  color: #295008;
-}
 .field-container .input-container.green input::placeholder {
   color: #295008;
 }
@@ -1219,9 +1203,6 @@ hr {
 }
 .field-container .input-container.blue {
   border: 1px solid var(--color-primary);
-}
-.field-container .input-container.blue input::-moz-placeholder {
-  color: #081b50;
 }
 .field-container .input-container.blue input::placeholder {
   color: #081b50;
@@ -1571,7 +1552,6 @@ tr > td:first-child {
 }
 .card-container .card {
   background-color: var(--color-bg);
-  max-height: -moz-min-content;
   max-height: min-content;
   padding: 1rem;
   max-width: 100%;
@@ -1709,7 +1689,6 @@ tr > td:first-child {
   justify-content: space-around;
   align-items: center;
   gap: 1rem;
-  width: -moz-fit-content;
   width: fit-content;
   border-radius: 0.5rem;
   margin-bottom: 1rem;
@@ -1738,7 +1717,6 @@ tr > td:first-child {
   top: 100%;
   left: 0;
   width: 100%;
-  width: -moz-fit-content;
   width: fit-content;
   min-width: 100px;
   background-color: var(--color-on-primary);
@@ -1918,19 +1896,9 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
-input::-moz-placeholder {
-  color: var(--color-permanent-on-primary-light);
-  font-size: 1.25rem;
-}
-
 input::placeholder {
   color: var(--color-permanent-on-primary-light);
   font-size: 1.25rem;
-}
-
-input[type=number]::-moz-placeholder, input[type=text]::-moz-placeholder {
-  opacity: 0.5;
-  font-family: "Open Sans", sans-serif;
 }
 
 input[type=number]::placeholder,
@@ -1953,11 +1921,6 @@ input[type=text].edit-name {
 input[type=text].edit-name:hover,
 input[type=text].edit-name:focus-within {
   border: 1px solid var(--color-primary);
-}
-
-input[type=text].edit-name::-moz-placeholder {
-  opacity: 0.5;
-  font-size: 1.8rem;
 }
 
 input[type=text].edit-name::placeholder {
@@ -2163,7 +2126,6 @@ textarea {
   gap: 0.5rem;
   padding: 0.4rem 0.6rem;
   border-radius: 0.5rem;
-  width: -moz-fit-content;
   width: fit-content;
   height: 30px;
   border: 1.5px solid var(--color-light-gray);
@@ -2204,7 +2166,6 @@ textarea {
   font-size: 1.2rem;
   gap: 5px;
   border-radius: 8px;
-  width: -moz-fit-content;
   width: fit-content;
   height: 30px;
   background-color: var(--color-primary-95);
@@ -2514,7 +2475,6 @@ textarea {
   gap: 0.5rem;
   padding: 0.4rem 0.8rem;
   border-radius: 0.5rem;
-  width: -moz-fit-content;
   width: fit-content;
   min-width: 50px;
   height: 47px;
@@ -2532,7 +2492,6 @@ textarea {
   gap: 5px;
   padding: 0.4rem 0.8rem;
   border-radius: 0.5rem;
-  width: -moz-fit-content;
   width: fit-content;
   min-width: 50px;
   height: 47px;
@@ -2658,7 +2617,6 @@ textarea {
   gap: 0.2rem;
   padding: 0 10px;
   border-radius: 2.2rem;
-  width: -moz-fit-content;
   width: fit-content;
   min-width: 50px;
   display: flex;
@@ -3219,7 +3177,6 @@ textarea {
   display: flex;
   flex-direction: column;
   border-radius: 0.5rem;
-  min-width: -moz-fit-content;
   min-width: fit-content;
 }
 
@@ -3307,7 +3264,6 @@ textarea {
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  width: -moz-max-content;
   width: max-content;
   justify-content: center;
   border-radius: 1.4rem;
@@ -3357,7 +3313,6 @@ textarea {
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  width: -moz-max-content;
   width: max-content;
   justify-content: center;
   border-radius: 0.5rem;
@@ -3471,7 +3426,6 @@ textarea {
   opacity: 0;
 }
 .card-header .top .right .header-fields .edit-content {
-  width: -moz-max-content;
   width: max-content;
   height: 35px;
 }
@@ -3623,7 +3577,6 @@ textarea {
   gap: 1rem;
   color: var(--color-on-primary-light);
   padding: 1rem 2rem;
-  width: -moz-max-content;
   width: max-content;
 }
 .calendar-menu .date-nav {
@@ -4026,7 +3979,6 @@ textarea {
   justify-content: start;
   flex-direction: column-reverse;
   min-height: 120px;
-  height: -moz-min-content;
   height: min-content;
   width: 50px;
   align-items: center;
@@ -4290,8 +4242,7 @@ textarea {
   left: 0;
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   cursor: pointer;
 }
 
@@ -4520,8 +4471,7 @@ textarea {
 }
 .chat-icon-container img {
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   height: 100%;
   display: block;
 }
@@ -4572,8 +4522,7 @@ textarea {
 
 img {
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .chat-list .chat-box .chat-details .text-message b {
@@ -4751,8 +4700,7 @@ img {
 }
 .message-container .chat-icon-container img {
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   height: 100%;
   display: block;
 }
