--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -194,7 +194,7 @@
             gap: 1rem;
             cursor: pointer;
             .group-item-topic {
-              width: 120px;
+              // width: 150px;
               display: flex;
               align-items: center;
               gap: 0.5rem;
@@ -280,7 +280,7 @@
     }
   }
 
-  .create-show {
+  .create-show, .search-menu {
     position: absolute;
     display: flex;
     flex-direction: column;
