--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -327,7 +327,7 @@
   }
 
   @media screen and (max-width: 913px) {
-    .create-show {
+    .create-show, .search-menu {
       position: fixed;
       margin-top: 6rem;
       width: 90%;
