--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -1068,6 +1068,9 @@ hr {
   .navbar .menu {
     width: 95%;
   }
+  .navbar .navbar__main > *:not(:first-child) {
+    margin-right: -20px;
+  }
   .navbar .navbar-top {
     align-self: end;
     flex-direction: row-reverse;
@@ -1204,8 +1207,8 @@ hr {
   color: #081b50;
 }
 
-.moved-element {
-  margin-left: -20px;
+.margin-adjustment {
+  margin-right: -20px;
 }
 
 .home {
