--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -362,6 +362,18 @@
       gap: 1rem;
     }
   }
+
+  // @media screen and (max-width: 300px) {
+  //   .navbar__main > *:not(:first-child) {
+  //     margin-right: -20px;
+  //   }
+  //   .navbar-top {
+  //     align-self: end;
+  //     flex-direction: column;
+  //     gap: 1rem;
+  //     align-items: flex-end;
+  //   }
+  // }
 }
 .active {
   display: none !important;
@@ -496,4 +508,8 @@
 
 .margin-adjustment {
   margin-right: -20px;
+}
+
+.hide-main-elements > * {
+  display: none;
 }
