--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -416,6 +416,7 @@
   gap: 1rem;
   align-items: center;
   margin-bottom: 1rem;
+  flex-wrap: wrap;
   .create-category {
     cursor: pointer;
     transition: $transition;
