--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -1120,6 +1120,7 @@ hr {
   gap: 1rem;
   align-items: center;
   margin-bottom: 1rem;
+  flex-wrap: wrap;
 }
 .icons-container-create .create-category {
   cursor: pointer;
