--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -545,13 +545,16 @@ i {
 }
 
 textarea {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   height: 20px;
   resize: none;
   border: none;
   font-size: 1.2rem;
+}
+
+textarea::-moz-placeholder {
+  color: gray;
+  font-family: "Open Sans", sans-serif;
 }
 
 textarea::placeholder {
@@ -608,6 +611,7 @@ hr {
   align-items: center;
   overflow-x: hidden;
   min-height: 100vh;
+  max-height: -moz-min-content;
   max-height: min-content;
   min-width: 200px;
   margin-top: 1rem;
@@ -682,7 +686,6 @@ hr {
 .side-nav__content--list__item:focus {
   -webkit-tap-highlight-color: transparent;
   outline: none;
-  -ms-touch-action: manipulation;
   touch-action: manipulation;
 }
 .side-nav__content--list__item.create-item {
@@ -1003,7 +1006,8 @@ hr {
   gap: 1rem;
   align-items: center;
 }
-.navbar .create-show, .navbar .search-menu {
+.navbar .create-show,
+.navbar .search-menu {
   position: absolute;
   display: flex;
   flex-direction: column;
@@ -1016,6 +1020,10 @@ hr {
   top: 0;
   left: 50%;
   transform: translateX(-50%);
+}
+.navbar input[type=text].search-input::-moz-placeholder {
+  opacity: 0.5;
+  font-size: 1.25rem;
 }
 .navbar input[type=text].search-input::placeholder {
   opacity: 0.5;
@@ -1032,6 +1040,7 @@ hr {
   }
   .navbar .navbar-top .navbar__main .navbar__main--search,
   .navbar .navbar-top .navbar__main .navbar__main--create {
+    width: -moz-min-content;
     width: min-content;
   }
 }
@@ -1041,7 +1050,8 @@ hr {
   }
 }
 @media screen and (max-width: 913px) {
-  .navbar .create-show, .navbar .search-menu {
+  .navbar .create-show,
+  .navbar .search-menu {
     position: fixed;
     margin-top: 6rem;
     width: 90%;
@@ -1049,7 +1059,8 @@ hr {
     align-items: flex-start;
     overflow: hidden;
   }
-  .navbar .create-show .icons-container-create, .navbar .search-menu .icons-container-create {
+  .navbar .create-show .icons-container-create,
+  .navbar .search-menu .icons-container-create {
     display: flex; /* This ensures the content aligns horizontally */
     white-space: nowrap; /* Prevents content from wrapping */
     width: 100%;
@@ -1088,7 +1099,8 @@ hr {
 }
 .round-img-container img {
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 100%;
   display: block;
 }
@@ -1130,6 +1142,7 @@ hr {
   padding: 0 0.4rem;
   border-radius: 8px;
   font-size: 12px;
+  min-width: -moz-max-content;
   min-width: max-content;
 }
 .icons-container-create .create-category .create-icon {
@@ -1149,6 +1162,7 @@ hr {
 
 .navbar__create {
   background-color: var(--color-permanent-bg);
+  width: -moz-max-content;
   width: max-content;
   display: flex;
   gap: 0.5rem;
@@ -1172,6 +1186,7 @@ hr {
 }
 
 .search-width {
+  width: -moz-fit-content;
   width: fit-content;
 }
 
@@ -1192,6 +1207,9 @@ hr {
   border: 1px solid #3a700b;
   border: 1px solid rgba(58, 112, 11, 0.6509803922);
 }
+.field-container .input-container.green input::-moz-placeholder {
+  color: #295008;
+}
 .field-container .input-container.green input::placeholder {
   color: #295008;
 }
@@ -1201,12 +1219,15 @@ hr {
 .field-container .input-container.blue {
   border: 1px solid var(--color-primary);
 }
+.field-container .input-container.blue input::-moz-placeholder {
+  color: #081b50;
+}
 .field-container .input-container.blue input::placeholder {
   color: #081b50;
 }
 
 .margin-adjustment {
-  margin-right: -20px;
+  z-index: 10000;
 }
 
 .hide-main-elements > * {
@@ -1557,6 +1578,7 @@ tr > td:first-child {
 }
 .card-container .card {
   background-color: var(--color-bg);
+  max-height: -moz-min-content;
   max-height: min-content;
   padding: 1rem;
   max-width: 100%;
@@ -1694,6 +1716,7 @@ tr > td:first-child {
   justify-content: space-around;
   align-items: center;
   gap: 1rem;
+  width: -moz-fit-content;
   width: fit-content;
   border-radius: 0.5rem;
   margin-bottom: 1rem;
@@ -1722,6 +1745,7 @@ tr > td:first-child {
   top: 100%;
   left: 0;
   width: 100%;
+  width: -moz-fit-content;
   width: fit-content;
   min-width: 100px;
   background-color: var(--color-on-primary);
@@ -1901,9 +1925,19 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
+input::-moz-placeholder {
+  color: var(--color-permanent-on-primary-light);
+  font-size: 1.25rem;
+}
+
 input::placeholder {
   color: var(--color-permanent-on-primary-light);
   font-size: 1.25rem;
+}
+
+input[type=number]::-moz-placeholder, input[type=text]::-moz-placeholder {
+  opacity: 0.5;
+  font-family: "Open Sans", sans-serif;
 }
 
 input[type=number]::placeholder,
@@ -1926,6 +1960,11 @@ input[type=text].edit-name {
 input[type=text].edit-name:hover,
 input[type=text].edit-name:focus-within {
   border: 1px solid var(--color-primary);
+}
+
+input[type=text].edit-name::-moz-placeholder {
+  opacity: 0.5;
+  font-size: 1.8rem;
 }
 
 input[type=text].edit-name::placeholder {
@@ -2131,6 +2170,7 @@ textarea {
   gap: 0.5rem;
   padding: 0.4rem 0.6rem;
   border-radius: 0.5rem;
+  width: -moz-fit-content;
   width: fit-content;
   height: 30px;
   border: 1.5px solid var(--color-light-gray);
@@ -2171,6 +2211,7 @@ textarea {
   font-size: 1.2rem;
   gap: 5px;
   border-radius: 8px;
+  width: -moz-fit-content;
   width: fit-content;
   height: 30px;
   background-color: var(--color-primary-95);
@@ -2480,6 +2521,7 @@ textarea {
   gap: 0.5rem;
   padding: 0.4rem 0.8rem;
   border-radius: 0.5rem;
+  width: -moz-fit-content;
   width: fit-content;
   min-width: 50px;
   height: 47px;
@@ -2497,6 +2539,7 @@ textarea {
   gap: 5px;
   padding: 0.4rem 0.8rem;
   border-radius: 0.5rem;
+  width: -moz-fit-content;
   width: fit-content;
   min-width: 50px;
   height: 47px;
@@ -2622,6 +2665,7 @@ textarea {
   gap: 0.2rem;
   padding: 0 10px;
   border-radius: 2.2rem;
+  width: -moz-fit-content;
   width: fit-content;
   min-width: 50px;
   display: flex;
@@ -3182,6 +3226,7 @@ textarea {
   display: flex;
   flex-direction: column;
   border-radius: 0.5rem;
+  min-width: -moz-fit-content;
   min-width: fit-content;
 }
 
@@ -3269,6 +3314,7 @@ textarea {
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  width: -moz-max-content;
   width: max-content;
   justify-content: center;
   border-radius: 1.4rem;
@@ -3318,6 +3364,7 @@ textarea {
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  width: -moz-max-content;
   width: max-content;
   justify-content: center;
   border-radius: 0.5rem;
@@ -3431,6 +3478,7 @@ textarea {
   opacity: 0;
 }
 .card-header .top .right .header-fields .edit-content {
+  width: -moz-max-content;
   width: max-content;
   height: 35px;
 }
@@ -3582,6 +3630,7 @@ textarea {
   gap: 1rem;
   color: var(--color-on-primary-light);
   padding: 1rem 2rem;
+  width: -moz-max-content;
   width: max-content;
 }
 .calendar-menu .date-nav {
@@ -3984,6 +4033,7 @@ textarea {
   justify-content: start;
   flex-direction: column-reverse;
   min-height: 120px;
+  height: -moz-min-content;
   height: min-content;
   width: 50px;
   align-items: center;
@@ -4247,7 +4297,8 @@ textarea {
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   cursor: pointer;
 }
 
@@ -4476,7 +4527,8 @@ textarea {
 }
 .chat-icon-container img {
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 100%;
   display: block;
 }
@@ -4527,7 +4579,8 @@ textarea {
 
 img {
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .chat-list .chat-box .chat-details .text-message b {
@@ -4705,7 +4758,8 @@ img {
 }
 .message-container .chat-icon-container img {
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 100%;
   display: block;
 }
