--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -61,7 +61,9 @@
       gap: 1.5rem;
       font-size: font-size(font-size-regular);
       margin-bottom: 1rem;
-      // overflow-x: scroll;
+      overflow-x: scroll;
+      scrollbar-width: none;
+
 
 
       .header-fields {
