--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -545,16 +545,13 @@ i {
 }
 
 textarea {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
   height: 20px;
   resize: none;
   border: none;
   font-size: 1.2rem;
-}
-
-textarea::-moz-placeholder {
-  color: gray;
-  font-family: "Open Sans", sans-serif;
 }
 
 textarea::placeholder {
@@ -611,7 +608,6 @@ hr {
   align-items: center;
   overflow-x: hidden;
   min-height: 100vh;
-  max-height: -moz-min-content;
   max-height: min-content;
   min-width: 200px;
   margin-top: 1rem;
@@ -686,6 +682,7 @@ hr {
 .side-nav__content--list__item:focus {
   -webkit-tap-highlight-color: transparent;
   outline: none;
+  -ms-touch-action: manipulation;
   touch-action: manipulation;
 }
 .side-nav__content--list__item.create-item {
@@ -1021,10 +1018,6 @@ hr {
   left: 50%;
   transform: translateX(-50%);
 }
-.navbar input[type=text].search-input::-moz-placeholder {
-  opacity: 0.5;
-  font-size: 1.25rem;
-}
 .navbar input[type=text].search-input::placeholder {
   opacity: 0.5;
   font-size: 1.25rem;
@@ -1040,7 +1033,6 @@ hr {
   }
   .navbar .navbar-top .navbar__main .navbar__main--search,
   .navbar .navbar-top .navbar__main .navbar__main--create {
-    width: -moz-min-content;
     width: min-content;
   }
 }
@@ -1099,8 +1091,7 @@ hr {
 }
 .round-img-container img {
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   height: 100%;
   display: block;
 }
@@ -1142,7 +1133,6 @@ hr {
   padding: 0 0.4rem;
   border-radius: 8px;
   font-size: 12px;
-  min-width: -moz-max-content;
   min-width: max-content;
 }
 .icons-container-create .create-category .create-icon {
@@ -1162,7 +1152,6 @@ hr {
 
 .navbar__create {
   background-color: var(--color-permanent-bg);
-  width: -moz-max-content;
   width: max-content;
   display: flex;
   gap: 0.5rem;
@@ -1186,7 +1175,6 @@ hr {
 }
 
 .search-width {
-  width: -moz-fit-content;
   width: fit-content;
 }
 
@@ -1207,9 +1195,6 @@ hr {
   border: 1px solid #3a700b;
   border: 1px solid rgba(58, 112, 11, 0.6509803922);
 }
-.field-container .input-container.green input::-moz-placeholder {
-  color: #295008;
-}
 .field-container .input-container.green input::placeholder {
   color: #295008;
 }
@@ -1218,9 +1203,6 @@ hr {
 }
 .field-container .input-container.blue {
   border: 1px solid var(--color-primary);
-}
-.field-container .input-container.blue input::-moz-placeholder {
-  color: #081b50;
 }
 .field-container .input-container.blue input::placeholder {
   color: #081b50;
@@ -1578,7 +1560,6 @@ tr > td:first-child {
 }
 .card-container .card {
   background-color: var(--color-bg);
-  max-height: -moz-min-content;
   max-height: min-content;
   padding: 1rem;
   max-width: 100%;
@@ -1716,7 +1697,6 @@ tr > td:first-child {
   justify-content: space-around;
   align-items: center;
   gap: 1rem;
-  width: -moz-fit-content;
   width: fit-content;
   border-radius: 0.5rem;
   margin-bottom: 1rem;
@@ -1745,7 +1725,6 @@ tr > td:first-child {
   top: 100%;
   left: 0;
   width: 100%;
-  width: -moz-fit-content;
   width: fit-content;
   min-width: 100px;
   background-color: var(--color-on-primary);
@@ -1925,19 +1904,9 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
-input::-moz-placeholder {
-  color: var(--color-permanent-on-primary-light);
-  font-size: 1.25rem;
-}
-
 input::placeholder {
   color: var(--color-permanent-on-primary-light);
   font-size: 1.25rem;
-}
-
-input[type=number]::-moz-placeholder, input[type=text]::-moz-placeholder {
-  opacity: 0.5;
-  font-family: "Open Sans", sans-serif;
 }
 
 input[type=number]::placeholder,
@@ -1960,11 +1929,6 @@ input[type=text].edit-name {
 input[type=text].edit-name:hover,
 input[type=text].edit-name:focus-within {
   border: 1px solid var(--color-primary);
-}
-
-input[type=text].edit-name::-moz-placeholder {
-  opacity: 0.5;
-  font-size: 1.8rem;
 }
 
 input[type=text].edit-name::placeholder {
@@ -2170,7 +2134,6 @@ textarea {
   gap: 0.5rem;
   padding: 0.4rem 0.6rem;
   border-radius: 0.5rem;
-  width: -moz-fit-content;
   width: fit-content;
   height: 30px;
   border: 1.5px solid var(--color-light-gray);
@@ -2211,7 +2174,6 @@ textarea {
   font-size: 1.2rem;
   gap: 5px;
   border-radius: 8px;
-  width: -moz-fit-content;
   width: fit-content;
   height: 30px;
   background-color: var(--color-primary-95);
@@ -2521,7 +2483,6 @@ textarea {
   gap: 0.5rem;
   padding: 0.4rem 0.8rem;
   border-radius: 0.5rem;
-  width: -moz-fit-content;
   width: fit-content;
   min-width: 50px;
   height: 47px;
@@ -2539,7 +2500,6 @@ textarea {
   gap: 5px;
   padding: 0.4rem 0.8rem;
   border-radius: 0.5rem;
-  width: -moz-fit-content;
   width: fit-content;
   min-width: 50px;
   height: 47px;
@@ -2665,7 +2625,6 @@ textarea {
   gap: 0.2rem;
   padding: 0 10px;
   border-radius: 2.2rem;
-  width: -moz-fit-content;
   width: fit-content;
   min-width: 50px;
   display: flex;
@@ -3226,7 +3185,6 @@ textarea {
   display: flex;
   flex-direction: column;
   border-radius: 0.5rem;
-  min-width: -moz-fit-content;
   min-width: fit-content;
 }
 
@@ -3314,7 +3272,6 @@ textarea {
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  width: -moz-max-content;
   width: max-content;
   justify-content: center;
   border-radius: 1.4rem;
@@ -3364,7 +3321,6 @@ textarea {
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  width: -moz-max-content;
   width: max-content;
   justify-content: center;
   border-radius: 0.5rem;
@@ -3468,6 +3424,8 @@ textarea {
   gap: 1.5rem;
   font-size: 1.25rem;
   margin-bottom: 1rem;
+  overflow-x: scroll;
+  scrollbar-width: none;
 }
 .card-header .top .right .header-fields {
   display: flex;
@@ -3478,7 +3436,6 @@ textarea {
   opacity: 0;
 }
 .card-header .top .right .header-fields .edit-content {
-  width: -moz-max-content;
   width: max-content;
   height: 35px;
 }
@@ -3630,7 +3587,6 @@ textarea {
   gap: 1rem;
   color: var(--color-on-primary-light);
   padding: 1rem 2rem;
-  width: -moz-max-content;
   width: max-content;
 }
 .calendar-menu .date-nav {
@@ -4033,7 +3989,6 @@ textarea {
   justify-content: start;
   flex-direction: column-reverse;
   min-height: 120px;
-  height: -moz-min-content;
   height: min-content;
   width: 50px;
   align-items: center;
@@ -4297,8 +4252,7 @@ textarea {
   left: 0;
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   cursor: pointer;
 }
 
@@ -4527,8 +4481,7 @@ textarea {
 }
 .chat-icon-container img {
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   height: 100%;
   display: block;
 }
@@ -4579,8 +4532,7 @@ textarea {
 
 img {
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .chat-list .chat-box .chat-details .text-message b {
@@ -4758,8 +4710,7 @@ img {
 }
 .message-container .chat-icon-container img {
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   height: 100%;
   display: block;
 }
