--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -55,12 +55,18 @@
       .navbar__main--menu {
         .field-container {
           .input-container {
-            
             .skyz-name {
               padding-left: 1.5rem;
               color: #dfac4a;
               font-weight: 700;
               font-size: 14px;
+              overflow: hidden; /* Hide text when width is 0 */
+              transition: width 0.2s ease-in-out, opacity 0.3s ease-in-out;
+            }
+            
+            .skyz-name.active {
+              width: 100px; /* Define a target width */
+              opacity: 1; /* Make it visible */
             }
           }
         }
@@ -477,9 +483,13 @@
 }
 
 .field-container {
+  transition: width 0.2s ease-in-out, opacity 0.3s ease-in-out;
+
   .input-container {
     background-color: var(--color-on-primary);
     background-color: #f9f9f9;
+    transition: width 0.2s ease-in-out, opacity 0.3s ease-in-out;
+
   }
   .input-container:hover {
     background-color: var(--color-on-primary);
@@ -520,23 +530,23 @@
 
 
 .navbar-input {
-  width: 0;
+  // width: 0;
   transition: width 0.2s ease-in-out, opacity 0.3s ease-in-out; 
-  overflow: hidden; 
+  // overflow: hidden; 
 }
 
 
-.navbar-input.active {
-  width: 100%;
-  opacity: 1; 
-}
+// .navbar-input.active {
+//   width: 100%;
+//   opacity: 1; 
+// }
 
-.slide-in {
-  width: 100%; 
-  opacity: 1; 
-}
+// .slide-in {
+//   width: 100%; 
+//   opacity: 1; 
+// }
 
-.slide-out {
-  width: 0; 
-  opacity: 0; 
-}
+// .slide-out {
+//   width: 0; 
+//   opacity: 0; 
+// }
