--- a/sass/_card.scss
+++ b/sass/_card.scss
@@ -122,9 +122,34 @@
           }
         }
 
+        &__content.filters {
+          padding: 1rem;
+          border-bottom-left-radius: 0%;
+          border-bottom-right-radius: 0%;
+          display: flex;
+          flex-direction: column;
+          gap: 1rem;
+
+          .filters__line {
+            display: flex;
+            align-items: center;
+            // justify-content: center;
+            gap: 1rem;
+            width: 100%;
+            .fields {
+              display: flex;
+              align-items: center;
+              gap: .5rem;
+              .edit-content {
+                width: 190px;
+              }
+            }
+          }
+        }
         .add-circle {
           opacity: 0;
         }
+       
       }
 
       &--box:hover {
