--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -1675,6 +1675,28 @@ tr > td:first-child {
   overflow: hidden;
   width: 100%;
 }
+.card-container .card__boxes--box__content.filters {
+  padding: 1rem;
+  border-bottom-left-radius: 0%;
+  border-bottom-right-radius: 0%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.card-container .card__boxes--box__content.filters .filters__line {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  width: 100%;
+}
+.card-container .card__boxes--box__content.filters .filters__line .fields {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+.card-container .card__boxes--box__content.filters .filters__line .fields .edit-content {
+  width: 190px;
+}
 .card-container .card__boxes--box .add-circle {
   opacity: 0;
 }
