--- a/sass/_card.scss
+++ b/sass/_card.scss
@@ -136,12 +136,41 @@
             // justify-content: center;
             gap: 1rem;
             width: 100%;
+            flex-wrap: wrap;
+            // background-color: #e0f0fb;
+            // padding: 1rem;
             .fields {
               display: flex;
               align-items: center;
-              gap: .5rem;
+              gap: 0.7rem;
               .edit-content {
                 width: 190px;
+                border: 1px solid rgba(135, 125, 74, 0.361);
+                width: fit-content;
+                min-width: 150px;
+                .edit-field {
+                  border: none;
+                }
+              }
+            }
+
+            .check-box {
+              display: flex;
+              align-items: center;
+              gap: 1rem;
+              .filters-number {
+                border: 1px solid transparent;
+                padding: 0 0.6rem;
+                height: 3.7rem;
+                // width: 3.5rem;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-radius: 4px;
+                cursor: pointer;
+              }
+              .filters-number:hover {
+                border: 1px solid var(--color-on-primary-light);
               }
             }
           }
@@ -149,7 +178,6 @@
         .add-circle {
           opacity: 0;
         }
-       
       }
 
       &--box:hover {
