--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -1688,14 +1688,39 @@ tr > td:first-child {
   align-items: center;
   gap: 1rem;
   width: 100%;
+  flex-wrap: wrap;
 }
 .card-container .card__boxes--box__content.filters .filters__line .fields {
   display: flex;
   align-items: center;
-  gap: 0.5rem;
+  gap: 0.7rem;
 }
 .card-container .card__boxes--box__content.filters .filters__line .fields .edit-content {
   width: 190px;
+  border: 1px solid rgba(135, 125, 74, 0.361);
+  width: fit-content;
+  min-width: 150px;
+}
+.card-container .card__boxes--box__content.filters .filters__line .fields .edit-content .edit-field {
+  border: none;
+}
+.card-container .card__boxes--box__content.filters .filters__line .check-box {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.card-container .card__boxes--box__content.filters .filters__line .check-box .filters-number {
+  border: 1px solid transparent;
+  padding: 0 0.6rem;
+  height: 3.7rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.card-container .card__boxes--box__content.filters .filters__line .check-box .filters-number:hover {
+  border: 1px solid var(--color-on-primary-light);
 }
 .card-container .card__boxes--box .add-circle {
   opacity: 0;
@@ -2864,6 +2889,10 @@ textarea {
 .green-circle {
   color: var(--color-green);
   font-size: 22px;
+}
+
+.small-icon {
+  font-size: 19px;
 }
 
 .edit-content {
