--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -545,13 +545,16 @@ i {
 }
 
 textarea {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   height: 20px;
   resize: none;
   border: none;
   font-size: 1.2rem;
+}
+
+textarea::-moz-placeholder {
+  color: gray;
+  font-family: "Open Sans", sans-serif;
 }
 
 textarea::placeholder {
@@ -608,6 +611,7 @@ hr {
   align-items: center;
   overflow-x: hidden;
   min-height: 100vh;
+  max-height: -moz-min-content;
   max-height: min-content;
   min-width: 200px;
   margin-top: 1rem;
@@ -682,7 +686,6 @@ hr {
 .side-nav__content--list__item:focus {
   -webkit-tap-highlight-color: transparent;
   outline: none;
-  -ms-touch-action: manipulation;
   touch-action: manipulation;
 }
 .side-nav__content--list__item.create-item {
@@ -1024,6 +1027,10 @@ hr {
   left: 50%;
   transform: translateX(-50%);
 }
+.navbar input[type=text].search-input::-moz-placeholder {
+  opacity: 0.5;
+  font-size: 1.25rem;
+}
 .navbar input[type=text].search-input::placeholder {
   opacity: 0.5;
   font-size: 1.25rem;
@@ -1039,6 +1046,7 @@ hr {
   }
   .navbar .navbar-top .navbar__main .navbar__main--search,
   .navbar .navbar-top .navbar__main .navbar__main--create {
+    width: -moz-min-content;
     width: min-content;
   }
 }
@@ -1097,7 +1105,8 @@ hr {
 }
 .round-img-container img {
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 100%;
   display: block;
 }
@@ -1139,6 +1148,7 @@ hr {
   padding: 0 0.4rem;
   border-radius: 8px;
   font-size: 12px;
+  min-width: -moz-max-content;
   min-width: max-content;
 }
 .icons-container-create .create-category .create-icon {
@@ -1158,6 +1168,7 @@ hr {
 
 .navbar__create {
   background-color: var(--color-permanent-bg);
+  width: -moz-max-content;
   width: max-content;
   display: flex;
   gap: 0.5rem;
@@ -1181,6 +1192,7 @@ hr {
 }
 
 .search-width {
+  width: -moz-fit-content;
   width: fit-content;
 }
 
@@ -1205,6 +1217,9 @@ hr {
   border: 1px solid #3a700b;
   border: 1px solid rgba(58, 112, 11, 0.6509803922);
 }
+.field-container .input-container.green input::-moz-placeholder {
+  color: #295008;
+}
 .field-container .input-container.green input::placeholder {
   color: #295008;
 }
@@ -1213,6 +1228,9 @@ hr {
 }
 .field-container .input-container.blue {
   border: 1px solid var(--color-primary);
+}
+.field-container .input-container.blue input::-moz-placeholder {
+  color: #081b50;
 }
 .field-container .input-container.blue input::placeholder {
   color: #081b50;
@@ -1574,6 +1592,7 @@ tr > td:first-child {
 }
 .card-container .card {
   background-color: var(--color-bg);
+  max-height: -moz-min-content;
   max-height: min-content;
   padding: 1rem;
   max-width: 100%;
@@ -1694,15 +1713,36 @@ tr > td:first-child {
   display: flex;
   align-items: center;
   gap: 0.7rem;
+  flex-wrap: wrap;
 }
 .card-container .card__boxes--box__content.filters .filters__line .fields .edit-content {
   width: 190px;
   border: 1px solid rgba(135, 125, 74, 0.361);
+  width: -moz-fit-content;
   width: fit-content;
   min-width: 150px;
 }
 .card-container .card__boxes--box__content.filters .filters__line .fields .edit-content .edit-field {
   border: none;
+}
+.card-container .card__boxes--box__content.filters .filters__line .fields .edit-content:hover {
+  background-color: transparent;
+}
+.card-container .card__boxes--box__content.filters .filters__line .fields .edit-content.disabled {
+  opacity: 0.8;
+}
+.card-container .card__boxes--box__content.filters .filters__line .add-delete-btns-container {
+  display: flex;
+  gap: 1rem;
+}
+.card-container .card__boxes--box__content.filters .filters__line .add-delete-btns-container span {
+  cursor: pointer;
+  border-radius: 180px;
+  background-color: var(--color-bg);
+  transition: all 0.2s ease-in-out;
+}
+.card-container .card__boxes--box__content.filters .filters__line .add-delete-btns-container span:hover {
+  background-color: var(--color-blue);
 }
 .card-container .card__boxes--box__content.filters .filters__line .check-box {
   display: flex;
@@ -1717,10 +1757,18 @@ tr > td:first-child {
   align-items: center;
   justify-content: center;
   border-radius: 4px;
+  gap: 0.2rem;
   cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+.card-container .card__boxes--box__content.filters .filters__line .check-box .filters-number .small-icon {
+  opacity: 0;
 }
 .card-container .card__boxes--box__content.filters .filters__line .check-box .filters-number:hover {
   border: 1px solid var(--color-on-primary-light);
+}
+.card-container .card__boxes--box__content.filters .filters__line .check-box .filters-number:hover .small-icon {
+  opacity: 1;
 }
 .card-container .card__boxes--box .add-circle {
   opacity: 0;
@@ -1758,6 +1806,7 @@ tr > td:first-child {
   justify-content: space-around;
   align-items: center;
   gap: 1rem;
+  width: -moz-fit-content;
   width: fit-content;
   border-radius: 0.5rem;
   margin-bottom: 1rem;
@@ -1786,6 +1835,7 @@ tr > td:first-child {
   top: 100%;
   left: 0;
   width: 100%;
+  width: -moz-fit-content;
   width: fit-content;
   min-width: 100px;
   background-color: var(--color-on-primary);
@@ -1965,9 +2015,19 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
+input::-moz-placeholder {
+  color: var(--color-permanent-on-primary-light);
+  font-size: 1.25rem;
+}
+
 input::placeholder {
   color: var(--color-permanent-on-primary-light);
   font-size: 1.25rem;
+}
+
+input[type=number]::-moz-placeholder, input[type=text]::-moz-placeholder {
+  opacity: 0.5;
+  font-family: "Open Sans", sans-serif;
 }
 
 input[type=number]::placeholder,
@@ -1990,6 +2050,11 @@ input[type=text].edit-name {
 input[type=text].edit-name:hover,
 input[type=text].edit-name:focus-within {
   border: 1px solid var(--color-primary);
+}
+
+input[type=text].edit-name::-moz-placeholder {
+  opacity: 0.5;
+  font-size: 1.8rem;
 }
 
 input[type=text].edit-name::placeholder {
@@ -2195,6 +2260,7 @@ textarea {
   gap: 0.5rem;
   padding: 0.4rem 0.6rem;
   border-radius: 0.5rem;
+  width: -moz-fit-content;
   width: fit-content;
   height: 30px;
   border: 1.5px solid var(--color-light-gray);
@@ -2235,6 +2301,7 @@ textarea {
   font-size: 1.2rem;
   gap: 5px;
   border-radius: 8px;
+  width: -moz-fit-content;
   width: fit-content;
   height: 30px;
   background-color: var(--color-primary-95);
@@ -2544,6 +2611,7 @@ textarea {
   gap: 0.5rem;
   padding: 0.4rem 0.8rem;
   border-radius: 0.5rem;
+  width: -moz-fit-content;
   width: fit-content;
   min-width: 50px;
   height: 47px;
@@ -2561,6 +2629,7 @@ textarea {
   gap: 5px;
   padding: 0.4rem 0.8rem;
   border-radius: 0.5rem;
+  width: -moz-fit-content;
   width: fit-content;
   min-width: 50px;
   height: 47px;
@@ -2686,6 +2755,7 @@ textarea {
   gap: 0.2rem;
   padding: 0 10px;
   border-radius: 2.2rem;
+  width: -moz-fit-content;
   width: fit-content;
   min-width: 50px;
   display: flex;
@@ -3250,6 +3320,7 @@ textarea {
   display: flex;
   flex-direction: column;
   border-radius: 0.5rem;
+  min-width: -moz-fit-content;
   min-width: fit-content;
 }
 
@@ -3337,6 +3408,7 @@ textarea {
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  width: -moz-max-content;
   width: max-content;
   justify-content: center;
   border-radius: 1.4rem;
@@ -3386,6 +3458,7 @@ textarea {
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  width: -moz-max-content;
   width: max-content;
   justify-content: center;
   border-radius: 0.5rem;
@@ -3501,6 +3574,7 @@ textarea {
   opacity: 0;
 }
 .card-header .top .right .header-fields .edit-content {
+  width: -moz-max-content;
   width: max-content;
   height: 35px;
 }
@@ -3651,6 +3725,7 @@ textarea {
   gap: 1rem;
   color: var(--color-on-primary-light);
   padding: 1rem 2rem;
+  width: -moz-max-content;
   width: max-content;
 }
 .calendar-menu .date-nav {
@@ -4053,6 +4128,7 @@ textarea {
   justify-content: start;
   flex-direction: column-reverse;
   min-height: 120px;
+  height: -moz-min-content;
   height: min-content;
   width: 50px;
   align-items: center;
@@ -4316,7 +4392,8 @@ textarea {
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   cursor: pointer;
 }
 
@@ -4545,7 +4622,8 @@ textarea {
 }
 .chat-icon-container img {
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 100%;
   display: block;
 }
@@ -4596,7 +4674,8 @@ textarea {
 
 img {
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .chat-list .chat-box .chat-details .text-message b {
@@ -4774,7 +4853,8 @@ img {
 }
 .message-container .chat-icon-container img {
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 100%;
   display: block;
 }
