--- a/sass/_card.scss
+++ b/sass/_card.scss
@@ -177,6 +177,7 @@
               display: flex;
               align-items: center;
               gap: 1rem;
+              width: 80px;
               .filters-number {
                 border: 1px solid transparent;
                 padding: 0 0.6rem;
