--- a/sass/_card.scss
+++ b/sass/_card.scss
@@ -129,11 +129,18 @@
           display: flex;
           flex-direction: column;
           gap: 1rem;
-
+          .filters-header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 100%;
+            .title {
+              font-size: 15px;
+            }
+          }
           .filters__line {
             display: flex;
             align-items: center;
-            // justify-content: center;
             gap: 1rem;
             width: 100%;
             flex-wrap: wrap;
