--- a/sass/_card.scss
+++ b/sass/_card.scss
@@ -156,8 +156,10 @@
                 border: 1px solid rgba(135, 125, 74, 0.361);
                 width: fit-content;
                 min-width: 150px;
+                height: 35px;
                 .edit-field {
                   border: none;
+                  background-color: transparent;
                 }
               }
               .edit-content:hover {
@@ -188,7 +190,7 @@
               .filters-number {
                 border: 1px solid transparent;
                 padding: 0 0.6rem;
-                height: 3.7rem;
+                height: 3.5rem;
                 // width: 3.5rem;
                 display: flex;
                 align-items: center;
@@ -214,7 +216,7 @@
             width: 100%;
             background-color: var(--color-on-primary-light);
             opacity: 0.1;
-            margin: 0.7rem 0;
+            margin: 0.5rem 0;
           }
         }
         .add-circle {
