--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -2628,11 +2628,7 @@ textarea {
   color: var(--color-on-primary);
   background-color: var(--color-primary);
   border: 1px solid var(--color-primary);
-  display: flex;
-  align-items: center;
-  justify-content: center;
   font-size: 1.2rem;
-  gap: 0.5rem;
   padding: 0.4rem 0.8rem;
   border-radius: 0.5rem;
   width: -moz-fit-content;
@@ -2679,17 +2675,17 @@ textarea {
 
 .round-btn-primary.green {
   color: var(--color-on-primary);
-  background-color: #3A700B;
+  background-color: #3a700b;
 }
 
 .round-btn-primary.purple {
   color: var(--color-on-primary);
-  background-color: #6F45A1;
+  background-color: #6f45a1;
 }
 
 .round-btn-primary.yellow {
   color: var(--color-on-primary);
-  background-color: #DFAC4A;
+  background-color: #dfac4a;
 }
 
 .round-btn-primary.blue {
