--- a/sass/_card.scss
+++ b/sass/_card.scss
@@ -177,6 +177,7 @@
                 border-radius: 180px;
                 background-color: var(--color-bg);
                 transition: $transition;
+                font-size: 19px;
               }
               span:hover {
                 background-color: var(--color-blue);
