--- a/sass/_flex-table.scss
+++ b/sass/_flex-table.scss
@@ -83,8 +83,21 @@
 }
 .visibility-is-off {
   max-width: 50px;
+  min-width: 50px;
 }
 
 .visibility-title-off {
   max-width: 50px;
+  min-width: 50px;
+}
+
+.visibility-btn {
+  opacity: 0;
+}
+
+.table-cell:hover {
+  .visibility-btn {
+    opacity: 1;
+  }
+  
 }
