--- a/sass/_edit-mode.scss
+++ b/sass/_edit-mode.scss
@@ -398,3 +398,10 @@
 .arrow-small-padding:hover {
   opacity: 1;
 }
+
+.edit-content.large {
+  width: 250px;
+}
+.edit-content.small {
+  width: 120px;
+}
