--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -209,6 +209,7 @@
               }
             }
             .group-item-topic:hover {
+              text-decoration: underline;
               .edit-group-item-topic {
                 opacity: 1;
               }
